fix : fixed spacing between cards

--- a/style.scss
+++ b/style.scss
@@ -652,9 +652,16 @@ footer {
     top: 45%;
     z-index: 999;
   }
+  .heading-title{
+    margin-bottom: 0px;
+  }
 
   .heading-title h3 {
     padding-left: 50px;
+  }
+
+  .card-container{
+    margin-bottom: 0px;
   }
 
   .content {
